--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,13 +15,18 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.64",
     "axios": "^1.8.4",
+    "date-fns": "^4.1.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^6.30.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.8.4"
+    "remark-gfm": "^4.0.1",
+    "socket.io-client": "^4.8.1",
+    "typescript": "^4.8.4",
+    "uuid": "^11.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
